--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "echarts": "^5.5.1",
+    "element-plus": "^2.8.7",
+    "font-awesome": "^4.7.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "sass": "^1.80.6",
+    "sass-loader": "^16.0.3",
+    "vue": "^3.2.13",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -32,7 +41,11 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": 0,
+      "vue/no-reserved-keys": 0,
+      "vue/no-unused-components": 0
+    }
   },
   "browserslist": [
     "> 1%",
